--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 24 Dec 2020 12:09:56 GMT
+// Generated on Thu, 24 Dec 2020 12:42:33 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -316,7 +316,7 @@ $popup-common-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
 $popup-common-color-border-color: #B3B3B3;
 $popup-common-color-divider-color: #CCCCCC;
 $popup-common-color-background: white;
-$popup-common-color-footer-background-color: #F0F0F0;
+$popup-common-color-footer-background: #F0F0F0;
 $datepicker-toggle-size-width: 30px;
 $datepicker-toggle-size-height: 30px;
 $datepicker-body-size-label-padding-side: 33% / 7;
@@ -377,3 +377,14 @@ $navbar-item-color-states-disabled-opacity: 0.3;
 $navbar-item-size-padding: 16px;
 $navbar-brand-size-padding: 12px;
 $navbar-brand-size-margin-right: 24px;
+$popover-color-border-color: #B3B3B3;
+$popover-size-padding: 16px;
+$popover-size-border-width: 1px;
+$popover-size-border-radius: 4px;
+$popover-size-arrow-width: 4px;
+$popover-size-small-width: 200px;
+$popover-size-normal-width: 400px;
+$popover-size-large-width: 640px;
+$popover-header-size-padding: 10px 16px;
+$popover-footer-size-padding: 12px 16px;
+$popover-footer-size-margin-top: 8px;
