--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 24 Dec 2020 12:42:33 GMT
+// Generated on Thu, 24 Dec 2020 12:51:02 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -388,3 +388,5 @@ $popover-size-large-width: 640px;
 $popover-header-size-padding: 10px 16px;
 $popover-footer-size-padding: 12px 16px;
 $popover-footer-size-margin-top: 8px;
+$progress-bar-color-background: #F0F0F0;
+$progress-bar-size-height: 4px;
