--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 24 Dec 2020 13:06:47 GMT
+// Generated on Thu, 24 Dec 2020 13:36:32 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -391,3 +391,5 @@ $popover-footer-size-margin-top: 8px;
 $progress-bar-color-background: #F0F0F0;
 $progress-bar-size-height: 4px;
 $progress-spinner-size-size: 16px;
+$radio-size-size: 14px;
+$radio-size-padding: 24px; // Padding between radio inputs and their labels
