--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 24 Dec 2020 13:36:32 GMT
+// Generated on Fri, 25 Dec 2020 09:47:02 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -393,3 +393,12 @@ $progress-bar-size-height: 4px;
 $progress-spinner-size-size: 16px;
 $radio-size-size: 14px;
 $radio-size-padding: 24px; // Padding between radio inputs and their labels
+$select-size-height: 30px;
+$select-size-padding: 0 7px 0 15px;
+$select-size-padding-left-multiple: 7px;
+$select-panel-size-max-height: 232px;
+$select-panel-size-max-width: 640px;
+$select-panel-size-vertical-padding: 4px;
+$select-panel-size-border-width: 1px;
+$select-panel-size-border-radius: 3px;
+$select-item-size-height: 32px;
