--- a/packages/mosaic/splitter/_splitter-theme.scss
+++ b/packages/mosaic/splitter/_splitter-theme.scss
@@ -1,3 +1,6 @@
+@import '../design-tokens/index';
+
+
 @mixin mc-splitter-theme($theme) {
     $background: map-get($theme, background);
 
@@ -6,7 +9,7 @@
 
         &:hover,
         &.mc-gutter_dragged {
-            background-color: mix(map-get($background, background-disabled), map-get($background, overlay-hovered));
+            background-color: mix($color-background-background-disabled, $color-background-overlay-hovered);
         }
 
         &.mc-gutter_vertical {
@@ -14,7 +17,7 @@
         }
 
         &[disabled] {
-            background-color: mix(map-get($background, overlay-disabled), map-get($background, overlay-hovered));
+            background-color: mix($color-background-overlay-disabled, $color-background-overlay-hovered);
 
             cursor: default;
         }
