--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 25 Dec 2020 11:10:41 GMT
+// Generated on Fri, 25 Dec 2020 11:38:44 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -407,3 +407,6 @@ $sidepanel-color-border: #B3B3B3;
 $sidepanel-header-size-padding: 14px 16px;
 $sidepanel-header-size-close-padding: 0 0 0 8px;
 $sidepanel-footer-size-padding: 16px;
+$table-color-border-width: 1px;
+$table-color-row-padding-vertical: 8px;
+$table-color-row-padding-horizontal: 16px;
